Replace video placeholders with video elements
Signed-off-by: iamfahad289 <dr.mech.fahad@gmail.com>

--- a/index.html
+++ b/index.html
@@ -371,10 +371,10 @@
             </div>
 
             <div class="video-container">
-                <div class="video-placeholder">
-                    <p>🎥 Madison Experiment Video<br>
-                    (Showing blue illuminated crosswalk with mannequins and vehicle approach)</p>
-                </div>
+                <video controls>
+                    <source src="videos/madison-experiment.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </div>
     </section>
@@ -463,10 +463,10 @@
             </div>
 
             <div class="video-container">
-                <div class="video-placeholder">
-                    <p>🎥 Milwaukee Experiment Video<br>
-                    (Demonstrating blue crosswalk illumination with pedestrians and approaching vehicles)</p>
-                </div>
+                <video controls>
+                    <source src="videos/milwaukee-experiment.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
             </div>
         </div>
     </section>
