Update project details in index.html
Signed-off-by: iamfahad289 <dr.mech.fahad@gmail.com>

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <h1>Enhanced Light Crosswalk Illumination</h1>
         <p class="project-id">Project ID: 0092-25-23</p>
         <p class="organizations">UW Teams and TAPCO</p>
-        <p class="date">January 29, 2026</p>
+        <p class="date"><strong>PI: Dr Tom Shi</strong></p>
         <div class="logos">
             <span class="logo-text">WI Dept of Transportation</span>
             <span class="logo-text">UW-Milwaukee</span>
