--- a/index.html
+++ b/index.html
@@ -319,6 +319,16 @@
             text-align: center;
             padding: 20px;
         }
+
+        /* YouTube iframe inside existing video container */
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
     </style>
 </head>
 <body>
@@ -371,10 +381,12 @@
             </div>
 
             <div class="video-container">
-                <video controls>
-                    <source src="videos/madison-experiment.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe
+                    src="https://www.youtube.com/embed/_uAMZvElRT4"
+                    title="Madison Experiment Video"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
     </section>
@@ -463,10 +475,12 @@
             </div>
 
             <div class="video-container">
-                <video controls>
-                    <source src="videos/milwaukee-experiment.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <iframe
+                    src="https://www.youtube.com/embed/Kk6jiMz4RyY"
+                    title="Milwaukee Experiment Video"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
     </section>
